# mcaptool

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.conan/profiles/: ci-x86_64
.github/workflows/: ci.yml
include/: convert.hpp  protobuf.hpp  split.hpp  video.hpp
proto/foxglove/: CompressedVideo.proto  KeyValuePair.proto
scripts/: format.sh
src/: convert.cpp  mcaptool.cpp  protobuf.cpp  split.cpp  video.cpp
